--- a/css/main.css
+++ b/css/main.css
@@ -148,16 +148,19 @@ h1 {
 }
 
 .demo {
-  vertical-align: middle;
   margin: auto;
   margin-top: -10rem;
-  width: 60%;
-  height: 80%;
+  width: 50%;
+  height: 400px;
   background-color: #eee;
   box-shadow: 0 10px 30px 0 rgba(168,173,187,.4);
   display: none;
   transform: translateX(0%);
   transition: all 1.8s;
+  background-image: url("../img/vini.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60%;
 }
 
 .demo-close {
